data/derived/fa15/progs/unify/prog2339.ml.out
Characters 29-35:
  let fixpoint (f,b) = wwhile (fp f b,b);;
                               ^^^^^^
Error: This expression has type unit but an expression was expected of type
         'a -> 'a * bool
